// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Showcases /> Should render correctly 1`] = `
<div>
  <div
    class="css-1hvjfqy-Container exfkgdd0"
    id="exampleGetApi"
  >
    <button
      class="css-67bxaj-ButonGetApi exfkgdd1"
    />
  </div>
</div>
`;

exports[`<Showcases /> When props.loading is true must render component <Spiner /> 1`] = `
<div>
  <div
    class="css-1hvjfqy-Container exfkgdd0"
    id="exampleGetApi"
  >
    <button
      class="css-67bxaj-ButonGetApi exfkgdd1"
    />
    <div
      class="css-d9vn3c-SpinnerRoot eks5uc10"
    />
  </div>
</div>
`;
